--- a/SEGURANÇA-INTERNO-WEBFORM.NET/SEGURANÇA-INTERNO-WEBFORM.NET.csproj
+++ b/SEGURANÇA-INTERNO-WEBFORM.NET/SEGURANÇA-INTERNO-WEBFORM.NET.csproj
@@ -121,6 +121,8 @@
     <Content Include="Default.aspx" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
+    <Content Include="icons\img\fqSecurity40x180.jpeg" />
+    <Content Include="icons\img\fqSecurity40x40.jpeg" />
     <Content Include="INDEX\Index.aspx" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
@@ -150,7 +152,6 @@
     <Content Include="Content\bootstrap-grid.rtl.css.map" />
     <Content Include="Content\bootstrap-grid.min.css.map" />
     <Content Include="Content\bootstrap-grid.css.map" />
-    <None Include="INDEX\.editorconfig" />
     <Content Include="master_page.Master" />
     <None Include="Scripts\jquery-3.7.0.intellisense.js" />
     <Content Include="Scripts\jquery-3.7.0.js" />
