Tela de cadastroUsuario precisa ajustar

--- a/SEGURANÇA-INTERNO-WEBFORM.NET/SEGURANÇA-INTERNO-WEBFORM.NET.csproj
+++ b/SEGURANÇA-INTERNO-WEBFORM.NET/SEGURANÇA-INTERNO-WEBFORM.NET.csproj
@@ -100,6 +100,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="About.aspx" />
+    <Content Include="cadastro\cadastroUsuario.aspx" />
     <Content Include="Contact.aspx" />
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
@@ -121,8 +122,10 @@
     <Content Include="Default.aspx" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
+    <Content Include="icons\bloqueado.png" />
     <Content Include="icons\img\fqSecurity40x180.jpeg" />
     <Content Include="icons\img\fqSecurity40x40.jpeg" />
+    <Content Include="icons\seguranca.png" />
     <Content Include="INDEX\Index.aspx" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
@@ -196,6 +199,13 @@
       <DependentUpon>About.aspx</DependentUpon>
     </Compile>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="cadastro\cadastroUsuario.aspx.cs">
+      <DependentUpon>cadastroUsuario.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="cadastro\cadastroUsuario.aspx.designer.cs">
+      <DependentUpon>cadastroUsuario.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Contact.aspx.cs">
       <DependentUpon>Contact.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
